# Backtest-Engine

./: .gitignore  CMakeLists.txt  README.md
.cache/clangd/index/: DataFetcher.cpp.FC99449642C73B30.idx  DataFetcher.hpp.CDF27838BC5B270E.idx  main.cpp.A5C052E34D9AC579.idx
app/: main.cpp
config/: api_key.txt
include/: Utilities.hpp
include/data/: DataFetcher.hpp  DataStruct.hpp
include/engine/: BacktestEngine.hpp
include/ui/: Color.hpp  Menu.hpp
src/data/: DataFetcher.cpp
src/engine/: BacktestEngine.cpp
src/ui/: Menu.cpp
